modules/network_security/main.tf
locals {
  tags = {
    Terraform = "true"
    Project   = var.project_id
  }
}

# SSH security group
resource "aws_security_group" "ssh" {
  name   = var.ssh_security_group_name
  vpc_id = var.vpc_id

  tags = merge(local.tags, {
    Name = var.ssh_security_group_name
  })
}

resource "aws_vpc_security_group_ingress_rule" "ssh" {
  security_group_id = aws_security_group.ssh.id
  for_each          = toset(var.allowed_ip_ranges)

  ip_protocol = "tcp"
  from_port   = 22
  to_port     = 22
  cidr_ipv4   = each.value
}

resource "aws_vpc_security_group_egress_rule" "ssh" {
  security_group_id = aws_security_group.ssh.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

# Public HTTP security group (ALB-facing)
resource "aws_security_group" "public_http" {
  name   = var.public_http_security_group_name
  vpc_id = var.vpc_id

  tags = merge(local.tags, {
    Name = var.public_http_security_group_name
  })
}

resource "aws_vpc_security_group_ingress_rule" "public_http" {
  security_group_id = aws_security_group.public_http.id
  for_each          = toset(var.allowed_ip_ranges)

  ip_protocol = "tcp"
  from_port   = 80
  to_port     = 80
  cidr_ipv4   = each.value
}

resource "aws_vpc_security_group_egress_rule" "public_http" {
  security_group_id = aws_security_group.public_http.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

# Private HTTP security group (EC2-facing, allows traffic from public HTTP SG)
resource "aws_security_group" "private_http" {
  name   = var.private_http_security_group_name
  vpc_id = var.vpc_id

  tags = merge(local.tags, {
    Name = var.private_http_security_group_name
  })
}

resource "aws_vpc_security_group_ingress_rule" "private_http" {
  security_group_id            = aws_security_group.private_http.id
  ip_protocol                  = "tcp"
  from_port                    = 80
  to_port                      = 80
  referenced_security_group_id = aws_security_group.public_http.id
}

resource "aws_vpc_security_group_egress_rule" "private_http" {
  security_group_id = aws_security_group.private_http.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}
